📜RobertsAnimeCornerStore Fixes
 -🔥Correctly gets series that have longer names in the website but user inputs shorthand (ex: Noragami vs Noragami Stray God)
 -🔥Removes text between title and "Omnibus" tag
📜Barnes & Nobles Fixes
 -🔥Correctly removes extra text after Omnibus Vol #
📜Books-A-Million Fixes
 -🔥Correctly removes extra text after Omnibus Vol #
📜MerryManga Fixes
 -❌Fixed issue where series that did not contain any BoxSets would sometimes not return any data

v2.1.2 - February 29th
✅Added new method to get websites that have a membership for a specific region

v2.1.0 - February 29th
✅Updated NuGet package desc
✅Added new param to Ascii Format table method and prints to determine whether to include links at the bottom
🔥Fixed Enum namespace so its MangaAndLightNovelWebScrape
🔥Fixed Model namespace for StockStatusFilter class so its MangaAndLightNovelWebScrape

v2.0.0 - February 29th 
✅Memberships are now bound to the MasterScrape object instead of the method
✅Moved Enums out of constants into it's own namespace
✅Added new method to get the results of a scrape formatted in a Ascii table, and options to print it as a ascii table to all print result methods
🔥Helper methods that return website list not return correctly as a HashSet
🔥Correctly throws error when user inputs a multi-flag Region
✍️Removed all websites from GetWebsite Helper methods that are not in a complete state
📜RobertsAnimeCornerStore Fixes
 -🔥Correctly filters out unintended volumes like Coloring Books
 -🔥Now checks all possible matching series lists on Rob's & prints all links
📜InStockTrades Fixes
 -🔥Correctly filteres out entries that contain a # in the inputted title that corresponds to the vol # and not the # in the title of the inputted series

v1.3.2 - February 24th
✅Added unit test for region check
🔥Fixed Region for SpeedyHen

v1.3.1 - February 24th
🔥Fixed Region enum flags for Region

v1.3.0 - February 24th
✅Added helper method to validate a list against a given region