@@ -1,0 +1,20 @@
+[Noragami Stray God Vol 1, $10.99, IS, Wordery]
+[Noragami Stray God Vol 2, $11.32, IS, Wordery]
+[Noragami Stray God Vol 3, $10.99, IS, Wordery]
+[Noragami Stray God Vol 4, $10.99, IS, Wordery]
+[Noragami Stray God Vol 5, $11.22, IS, Wordery]
+[Noragami Stray God Vol 6, $11.25, IS, Wordery]
+[Noragami Stray God Vol 7, $11.24, IS, Wordery]
+[Noragami Stray God Vol 8, $11.17, IS, Wordery]
+[Noragami Stray God Vol 9, $11.24, IS, Wordery]
+[Noragami Stray God Vol 10, $11.25, IS, Wordery]
+[Noragami Stray God Vol 12, $11.25, IS, Wordery]
+[Noragami Stray God Vol 13, $11.99, IS, Wordery]
+[Noragami Stray God Vol 14, $11.25, IS, Wordery]
+[Noragami Stray God Vol 15, $11.25, IS, Wordery]
+[Noragami Stray God Vol 19, $11.21, IS, Wordery]
+[Noragami Stray God Vol 21, $11.35, IS, Wordery]
+[Noragami Stray God Vol 22, $11.35, IS, Wordery]
+[Noragami Stray God Vol 23, $11.35, IS, Wordery]
+[Noragami Stray God Vol 24, $11.35, IS, Wordery]
+[Noragami Stray God Vol 25, $11.32, IS, Wordery]
